--- a/galeria.html
+++ b/galeria.html
@@ -21,7 +21,7 @@
         </ul>
     </div>
     <!-- strona główna -->
-<section>
+<section class="galeria">
     <article>
        galeria fotografiiiii i może coś wiecej  :D  
     </article>
