--- a/kontakt.html
+++ b/kontakt.html
@@ -22,7 +22,7 @@
     </div>
     <!-- kontakt -->
 
-    <section class="meeting">
+    <section class="kontakt">
         <article>
            tu bedzie napisane gdzie nas znajdziesz  :D 
             
