--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
     </div>
     <!-- strona główna -->
 
-    <section class="meeting">
+    <section class="news">
         nowości  co się u nas dzieje lub bedzie działo 
       
     </section>
