--- a/partnerzy.html
+++ b/partnerzy.html
@@ -22,7 +22,7 @@
     </div>
     <!-- strona główna -->
 
-    <section class="meeting">
+    <section class="partnerzy">
         nasi partnerzy i patroni medialni 
     </section>
     <!-- footer -->
