buldig basic look for news and partners

--- a/kontakt.html
+++ b/kontakt.html
@@ -24,7 +24,9 @@
 
     <section class="kontakt">
         <article>
-           tu bedzie napisane gdzie nas znajdziesz  :D 
+           <h2>KAŻDY PIĄTEK<br>
+            W GODZ. 17:00 - 20:00</h2>
+            <p>Spotykamy się w siedzibie stowarzyszenia, ul. Popiełuszki 4, pokój 33 na III piętrze </p>
             
         </article>
         
