--- a/news.html
+++ b/news.html
@@ -23,7 +23,10 @@
     <!-- strona główna -->
 
     <section class="news">
-        nowości  co się u nas dzieje lub bedzie działo 
+        <article>
+           <p>nowości  co się u nas dzieje lub bedzie działo</p>  
+        </article>
+        
       
     </section>
     <!-- footer -->
