--- a/partnerzy.html
+++ b/partnerzy.html
@@ -23,7 +23,37 @@
     <!-- strona główna -->
 
     <section class="partnerzy">
-        nasi partnerzy i patroni medialni 
+        <h1>nasi partnerzy</h1>
+        <div class="box__partnerzy">
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+    </div>
+        
+        <h1>nasi patroni medialni</h1>
+        <div class="box__partnerzy">
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+            <div class="partner"><a href="#"><img src="/img/dressta.jpg" alt="" srcset=""></a></div>
+        </div>
     </section>
     <!-- footer -->
     <footer>
