change  bg on few  site

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
         </div>
     
     </section>
-    <section class="what we have ">
+    <section class="what">
         <article>
-<h1>co mamy do zaoferowania </h1>
-<p>jeśli przyjdziesz na spotkanie napedksdk njndfkdjnfkdnfkdnf c ncn ejcnjen kc ne cn enc ec n nek cncn ekcnnec,n,cn nc nkcn cn cn nc nc n ecn  nc n ncke c enc jcec ecmeecn ceme n ne c Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam modi quam delectus non eligendi voluptate tempora dolor sunt, maiores reprehenderit voluptas, necessitatibus amet, blanditiis facilis! Labore officia incidunt iste modi!</p>
+<h2>co mamy do zaoferowania </h2>
+<p>jeśli przyjdziesz na spotkanie napewno bedziesz mógł zagrać  w kilka fajnych planszówek w doborowym towarzystwie. Jednakże  także dla naszych bywalców  mamy w ofercie gry konsolowe i komputerowe  ciepłe napoje (kawa lub herbata ), spotkania w ramach gier rpg, </p>
         </article>
     </section>
     <!-- footer -->
     <footer>
-       <p> przepraszam ale czy mogę cofnąć ruch ? :D :P</p>
+       <p>rzuć kostką i wykonaj ruch to takie proste :D  </p>
     </footer>
     <script src="main.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-replace-svg="nest"></script>
